--- a/vue01.html
+++ b/vue01.html
@@ -9,29 +9,32 @@
     <title>Vue01</title>
 </head>
 <body>
-
+    <h1>다양한 데이터의 출력</h1>
     <div id="app">
-        <p v-text="myText"></p>
-        <p v-html="myText"></p>
-        <span>
-            {{subText}}
-        </span>
+        <p>{{myText}}</p>
+        <p v-html="myHtml"></p>
+        <p>숫자: {{myNumber}}</p>
+        <p>부울형: {{myBool}}</p>
+        <p>배열: {{myArray}}</p>
+        <p>오브젝트: {{myObj}}</p>
+
+        {{$data}}
     </div>
-    <div id="app1">
-        {{myText}}
-    </div>
+
     <script>
         new Vue({
             el: '#app',
             data: {
-                myText: '<h1>Test Title</h1>',
-                subText: 'kimchi',
-            }
-        })
-        new Vue({
-            el: '#app1',
-            data: {
-                myText: 'this is sure?',
+                myText: 'Vue를 배워 봅시다. 이렇게 그냥 출력할수도 있고',
+                myHtml: '<h3> 태그를 넣어서 출력할 수 도 있습니다</h3>',
+                myNumber: '12345',
+                myBool: true,
+                myArray: [1,2,3,4,5],
+                myObj: [
+                    {name: '다즐링', price: 600},
+                    {name: '얼그레이', price: 500},
+                    {name: '실론', price: 400},
+                ]
             }
         })
     </script>
